--- a/fifa-rankings/styles.css
+++ b/fifa-rankings/styles.css
@@ -1,42 +1,42 @@
-img, p, h1, h2, .divider {
-	width: 100%;
-	max-width: 600px;
-    margin-left: auto;
-	margin-right: auto;
+body{
+    background-color: white;
 }
 
-img {
-	display: block;
-    padding: 15px 0px;
+p,h1,h2, .divider{
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
 }
 
-p {
-	font-size: 18px;
+h1{
+    font-size: 135px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+
+}
+
+img{
+    width:100%;
+    display: block; 
+}
+
+p{
+	font-size: 20px;
+    margin-top: 0px;
+    margin-bottom: 20px;
 	line-height: 1.4;
-    font-family: "Crimson Text";
+    font-family: "Bebas Neue";
+    text-align: center;
 }
 
 h1, h2 { 
-    font-family: "Roboto";
+    font-family: "Bebas Neue";
     }
+    
 
-.divider {
-height: 2px;
-background-color: #0868ac;
-margin-top: 10px;
-margin-bottom: 10px;
-}
 
-.byline {
-    font-size: 20px;
-	line-height: 1.4;
-    font-family: "Crimson Text";
-    color: #0868ac;
-}
-.image {
-    width: 100%;
-	max-width: 900px;
-    margin-left: auto;
-	margin-right: auto;
-}
-
+        
+        
