--- a/fifa-rankings/styles.css
+++ b/fifa-rankings/styles.css
@@ -2,39 +2,61 @@ body{
     background-color: white;
 }
 
-p,h1,h2, .divider{
+p,h1,h2{
     width: 100%;
     margin-left:auto;
     margin-right:auto;
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
 }
 
+
 h1{
-    font-size: 135px;
+    font-size: 50px;
     margin-left:auto;
     margin-right:auto;
     margin-top: 0px;
     margin-bottom: 0px;
     text-align: center;
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
 
 }
 
 img{
     width:100%;
     display: block; 
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
 }
 
 p{
-	font-size: 20px;
+	font-size: 18px;
     margin-top: 0px;
     margin-bottom: 20px;
 	line-height: 1.4;
-    font-family: "Bebas Neue";
-    text-align: center;
+    font-family: "Arial";
+    text-align: left;
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
 }
 
 h1, h2 { 
     font-family: "Bebas Neue";
     }
+
+
+.divider {
+height: 2px;
+background-color: #00008B;
+max-width: 1000px;
+margin: auto;
+}
+
     
 
 
