--- a/fifa-rankings/styles.css
+++ b/fifa-rankings/styles.css
@@ -112,6 +112,26 @@ max-width: 1000px;
 margin: auto;
 }
 
+
+/* unvisited link */
+a:link {
+    color:#00008B;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: #00008B;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: hotpink;
+  }
+  
+  /* selected link */
+  a:active {
+    color: #00008B;
+  }
     
 
 
